@@ -1,6 +1,5 @@
 package com.sparta.reviewassignment.post.service;
 
-import com.sparta.reviewassignment.post.dto.PostListResponseDto;
 import com.sparta.reviewassignment.post.dto.PostRequestDto;
 import com.sparta.reviewassignment.post.dto.PostResponseDto;
 import com.sparta.reviewassignment.post.entity.Post;
@@ -10,7 +9,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class PostService {
@@ -29,9 +27,8 @@ public class PostService {
         return new PostResponseDto(post);
     }
 
-    public PostListResponseDto read() {
-        List<PostResponseDto> postList = postRepository.findAll().stream().map(PostResponseDto::new).collect(Collectors.toList());
-           return new PostListResponseDto(postList);
+    public List<PostResponseDto> read() {
+        return postRepository.findAllByOrderByCreateAtDesc().stream().map(PostResponseDto::new).toList();
     }
 
     public PostResponseDto readId(Long id){
